created CRUD operations for weather
