# controllers/locationController.js
@@ -19,27 +19,3 @@ exports.location_create = async (req, res, next) => {
 
   res.status(201).json({ created: location.dataValues });
 };
-
-exports.location_delete = async (req, res, next) => {
-  Location.destroy({
-    where: {
-      id: req.params.id,
-    },
-  }).then(() => res.send("success"));
-};
-
-exports.location_update = async (req, res, next) => {
-  const { country, city, state, id } = req.body;
-  Location.update(
-    {
-      country,
-      city,
-      state,
-    }, 
-    {
-      where: {
-        id: id,
-      },
-    }
-  ).then(() => res.send("successfully updated"));
-};
