# controllers/weatherController.js
@@ -26,15 +26,46 @@ exports.weather_create = async (req, res, next) => {
 };
 
 exports.weather_get_all = async (req, res, next) => {
-  console.log("here")
   Weather.findAll({
     where: {
       locationId: req.params.locationId,
     },
   })
     .then((weather) => {
-      console.log(weather);
+      // console.log(weather);
       res.status(200).json({ response: "success", weather: weather });
     })
     .catch((err) => console.log(err));
 };
+
+exports.weather_update = async (req, res, next) => {
+  const { forecast, temperature, date } = req.body;
+  console.log(req.body);
+  Weather.update(
+    {
+      forecast,
+      temperature,
+    },
+    {
+      where: {
+        date: date
+      },
+    }
+  )
+    .then(() => res.send("successfully updated"))
+    .catch((err) => {
+      res.status(400);
+      next(err);
+      console.log(err);
+    });
+};
+
+exports.weather_delete = async (req, res, next) => {
+  Weather.destroy({
+    where: {
+      id: req.params.id,
+    },
+  }).then(() => res.send("success"));
+};
+
+
