# routes/locationRoutes.js
@@ -12,8 +12,4 @@ router.get("/", verify, locationController.location_get_all);
 
 router.post("/create", locationController.location_create);
 
-router.delete("/delete/:id", locationController.location_delete);
-
-router.put("/edit", locationController.location_update);
-
 module.exports = router;
