# routes/weatherRoutes.js
@@ -12,4 +12,8 @@ router.get("/:locationId",verify,  weatherController.weather_get_all);
 
 router.post("/create",verify, weatherController.weather_create);
 
+router.put("/edit", weatherController.weather_update);
+
+router.delete("/delete/:id", weatherController.weather_delete);
+
 module.exports = router;
